# Sartroscope

./: CMakeLists.txt  main.cpp
demo/: make_results.sh
